# zhihu-search

./: .gitignore  AGENT_SETUP.md  LICENSE  README.md  pyproject.toml  skills.sh.json
.github/workflows/: release.yml
setup/: README.md  SETUP.md  claude-code.md  codex.md  hanako-agent.md  opencode.md
skills/zhihu-search/: SKILL.md
src/zhihu_search/: __init__.py  __main__.py  cli.py  commands.py  credentials.py  formatters.py  openwebui.py  quota.py  server.py
src/zhihu_search/upstream/: __init__.py  base.py  http_client.py
tests/: conftest.py  test_commands.py  test_credentials.py  test_formatters.py  test_http_client.py  test_openwebui.py  test_quota.py  test_server.py
